[REFACTOR] Enhance Event implementation